integ-tests/tests/snapshots/parser__bad_booleans__false_trailing.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unquoted-string]: 
  ┌─ false_trailing:1:7
  │
1 │ foo = false2
  │       ^^^^^^ string is not quoted


